--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/public/js/tjobs.js": "/public/js/tjobs.js",
-    "/public/css/tjobs.css": "/public/css/tjobs.css"
+    "/public/js/tbatches.js": "/public/js/tbatches.js",
+    "/public/css/tbatches.css": "/public/css/tbatches.css"
 }
