--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,5 @@
 {
-    "/public/js/tbatches.js": "/public/js/tbatches.js",
-    "/public/css/tbatches.css": "/public/css/tbatches.css"
+    "/public/js/bootstrap.js": "/public/js/bootstrap.js",
+    "/public/css/tbatches.css": "/public/css/tbatches.css",
+    "/public/js/tbatches.js": "/public/js/tbatches.js"
 }
